--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -501,9 +501,6 @@ py-melissa-climate==2.0.0
 # homeassistant.components.seventeentrack
 py17track==2.2.2
 
-# homeassistant.components.tplink
-pyHS100==0.3.5
-
 # homeassistant.components.met
 # homeassistant.components.norway_air
 pyMetno==0.4.6
@@ -715,6 +712,9 @@ python-izone==1.1.2
 
 # homeassistant.components.juicenet
 python-juicenet==1.0.1
+
+# homeassistant.components.tplink
+python-kasa==0.4.0.dev0
 
 # homeassistant.components.xiaomi_miio
 python-miio==0.5.0.1
